added some comments

--- a/Part2_RAG_vfinal.ipynb
+++ b/Part2_RAG_vfinal.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "d66f7678-dd7b-48bf-8bc1-f81b6c52f459",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,7 @@
     "from typing_extensions import TypedDict\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import random\n",
     "from decouple import config\n",
     "from pydantic import BaseModel, Field\n",
     "from IPython.display import Image, display\n",
@@ -44,14 +45,16 @@
     "from langchain_ibm import WatsonxLLM\n",
     "from langgraph.graph import START, StateGraph\n",
     "from ibm_watsonx_ai.metanames import GenTextParamsMetaNames as GenParams\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "\n",
     "import litellm\n",
     "from litellm import completion\n",
     "import instructor\n",
     "from instructor import Mode\n",
     "\n",
-    "\n",
-    "import os"
+    "import pandas as pd\n",
+    "import os\n",
+    "import re"
    ]
   },
   {
@@ -112,15 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "d5811af8-8cd3-4e19-8d01-a422c6239e07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_ibm import WatsonxLLM\n",
-    "from ibm_watsonx_ai.metanames import GenTextParamsMetaNames as GenParams\n",
-    "\n",
-    "\n",
     "llm = WatsonxLLM(\n",
     "\n",
     "        model_id= \"ibm/granite-3-8b-instruct\",\n",
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "dd66c040-298e-463a-bf18-e31efd3b22ea",
    "metadata": {},
    "outputs": [
@@ -187,8 +186,6 @@
     }
    ],
    "source": [
-    "from langchain_community.document_loaders import TextLoader\n",
-    "\n",
     "\n",
     "document = TextLoader(r\"C:\\Users\\charl\\Documents\\CBS\\Code Projects_Python\\AIML25\\AIML25_Project\\parsed_markdown\\consolidated_markdown_data.md\").load()[0]\n",
     "document.metadata"
@@ -204,14 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "a410d210-bca1-486e-84f5-65569ea3be26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "from langchain_text_splitters import MarkdownHeaderTextSplitter\n",
-    "\n",
     "#splitting the markdown file based on headers\n",
     "headers_to_split_on = [(\"#\", \"Header 1\"), (\"##\", \"Header 2\"), (\"###\", \"Header 3\")]\n",
     "markdown_splitter = MarkdownHeaderTextSplitter(headers_to_split_on=headers_to_split_on)\n",
@@ -231,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "c72ebffe-1568-4e64-9072-c99373ec46b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filtering out content under the header \"page footer\" or data that is mostly links\n",
+    "#filtering out content under the header \"page footer\"/\"page header\"/\"page number\" or data that is mostly links\n",
     "filtered_chunks = []\n",
     "for chunk in final_chunks:\n",
     "    is_footer = (\n",
@@ -249,13 +243,13 @@
     "    )\n",
     "\n",
     "    if is_footer or is_link:\n",
-    "        continue  # Skip useless headers or content\n",
+    "        continue  \n",
     "    filtered_chunks.append(chunk)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "1a945fd3-a375-4fdf-8e9f-77c7d0ca35a6",
    "metadata": {},
    "outputs": [
@@ -275,6 +269,7 @@
     }
    ],
    "source": [
+    "#testing to find a value in the chunks\n",
     "for i, chunk in enumerate(filtered_chunks):\n",
     "    if \"574,99 €\" in chunk.page_content:\n",
     "        print(f\"FOUND in chunk {i}:\\n{chunk.page_content}\\n\")"
@@ -322,36 +317,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "519eb478-593c-43f4-84e1-6f49731b8149",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import deepcopy\n",
-    "\n",
-    "\n",
+    "#adding the header prefic to page content\n",
     "def update_documents_with_headers(chunks):\n",
-    "    \"\"\"\n",
-    "    Creates a new list of Document objects with page_content prepended with headers\n",
-    "    in [Header1/Header2/Header3]: format\n",
     "    \n",
-    "    Returns new objects rather than modifying the original chunks\n",
-    "    \"\"\"\n",
     "    updated_chunks = []\n",
-    "    max_depth=3 \n",
+    "    max_depth=3  #header 1,2,3\n",
     "    \n",
     "    for doc in chunks:\n",
-    "        # Create a deep copy of the document to avoid modifying the original\n",
-    "        new_doc = deepcopy(doc)\n",
+    "        new_doc = deepcopy(doc)  #creating a deep copy of the document to not modify the original\n",
     "        \n",
-    "        # Get all headers that exist in metadata\n",
+    "        #get all headers from the metadata\n",
     "        headers = []\n",
     "        for i in range(1, max_depth + 1):\n",
     "            key = f'Header {i}'\n",
     "            if key in new_doc.metadata:\n",
     "                headers.append(f\"{key}: {new_doc.metadata[key]}\")\n",
     "        \n",
-    "        # Create the header prefix and update page_content\n",
+    "        #creating the header prefix and update page_content\n",
     "        if headers:\n",
     "            prefix = f\"[{'/'.join(headers)}]: \"\n",
     "            new_doc.page_content = prefix + \"\\n\" + new_doc.page_content\n",
@@ -360,23 +347,22 @@
     "    \n",
     "    return updated_chunks\n",
     "\n",
-    "\n",
+    "#applying this function to the filtered chunks\n",
     "docs = update_documents_with_headers(filtered_chunks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "43fb772c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "#clean the data from urls\n",
+    "#clean the data from urls and sequences of whitespaces and changing the writing, so that only the first letter of each word is capital\n",
     "def clean_content(text):\n",
     "\n",
     "\n",
-    "    text = re.sub(r\"http\\S+\", \"\", text)  # Remove URLs\n",
+    "    text = re.sub(r\"http\\S+\", \"\", text)  \n",
     "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
     "    text = text.title()\n",
     "\n",
@@ -385,12 +371,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "id": "24f46ec9-60f2-4ea2-8d54-f039b12f1836",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply clean_content to each document's page_content\n",
+    "# apply clean_content to each document's page_content\n",
     "for doc in docs:\n",
     "    doc.page_content = clean_content(doc.page_content)"
    ]
@@ -443,18 +429,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "8d8c9a4a-7fdc-4897-bab9-6cdaa5beb5ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_ibm import WatsonxEmbeddings\n",
-    "\n",
-    "\n",
     "embed_params = {}\n",
     "\n",
     "watsonx_embedding = WatsonxEmbeddings(\n",
-    "    model_id=\"ibm/granite-embedding-278m-multilingual\",\n",
+    "    model_id=\"ibm/granite-embedding-278m-multilingual\", \n",
     "    url= WX_API_URL,\n",
     "    project_id=WX_PROJECT_ID,\n",
     "    apikey=WX_API_KEY,\n",
@@ -464,19 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "a864b696-8dce-44b0-ad98-8bc9a6f1c898",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_chroma import Chroma\n",
-    "\n",
-    "\n",
     "local_vector_db = Chroma.from_documents(\n",
     "    collection_name=\"my_collection\",\n",
     "    embedding=watsonx_embedding,\n",
     "    persist_directory=\"my_vector_db\", # This will save the vector database to disk! Delete it if you want to start fresh.\n",
-    "    documents=docs,\n",
+    "    documents=docs,    #these are the chunks \n",
     "    \n",
     ")"
    ]
@@ -507,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "ff2b4b38",
    "metadata": {},
    "outputs": [
@@ -531,13 +511,8 @@
     }
    ],
    "source": [
-    "# Retrieve the most similar text for the given query\n",
-    "query = \"What is the price in € of the K 7 Power Flex Home?\"\n",
+    "retrieved_documents = retriever.invoke(\"What is the price in € of the K 7 Power Flex Home?\")\n",
     "\n",
-    "# Retrieve the documents using the retriever\n",
-    "retrieved_documents = retriever.invoke(query)\n",
-    "\n",
-    "# Print the results\n",
     "for document in retrieved_documents:\n",
     "    print(f\"{'#' * 80}\\nID: {document.id}\")\n",
     "    first_n_of_content = document.page_content[:500].replace('\\n\\n', ' ')\n",
@@ -545,14 +520,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b24224f9",
+   "metadata": {},
+   "source": [
+    "## 7. Prompt template"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "2717c896",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
     "few_shot_examples = \"\"\"\n",
     "Example 1:\n",
     "Question: What is the price of the product 'K 7 Smart Control Flex Home'?\n",
@@ -675,30 +656,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 152,
-   "id": "b578d2d4",
+   "cell_type": "markdown",
+   "id": "70805a22",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df_edited = pd.read_csv(r\"C:\\Users\\charl\\Documents\\CBS\\Code Projects_Python\\AIML25\\AIML25_Project\\data\\SAP_Produktstammdaten_vfinal.csv\", sep=\",\")"
+    "## 8. Loading the csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
+   "id": "b578d2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_edited = pd.read_csv(r\"C:\\Users\\charl\\Documents\\CBS\\Code Projects_Python\\AIML25\\AIML25_Project\\data\\SAP_Produktstammdaten_vfinal.csv\", sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8143eea9",
+   "metadata": {},
+   "source": [
+    "## 9. Deleting random data from the csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d80e9d38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import random\n",
-    "\n",
-    "# Define the columns to exclude from deletion\n",
+    "#columns to exclude from deletion\n",
     "protected_columns = [\"Produktname\", \"Bestellnummer\"]\n",
     "\n",
-    "# Identify non-empty cells excluding the protected column\n",
+    "#identify non-empty cells excluding the protected column\n",
     "non_empty_cells = [\n",
     "    (i, col)\n",
     "    for i in df_edited.index\n",
@@ -706,21 +699,21 @@
     "    if col not in protected_columns and pd.notna(df_edited.at[i, col])\n",
     "]\n",
     "\n",
-    "# Define how many values to drop (e.g., 3% of available non-protected cells)\n",
-    "drop_fraction = 0.03\n",
+    "#define how many values to drop \n",
+    "drop_fraction = 0.03  #3%\n",
     "num_to_drop = int(len(non_empty_cells) * drop_fraction)\n",
     "\n",
-    "# Randomly select cells to drop\n",
+    "#randomly selects which cells to drop\n",
     "cells_to_drop = random.sample(non_empty_cells, num_to_drop)\n",
     "\n",
-    "# Set selected cells to NaN\n",
+    "#setting selected cells to NaN\n",
     "for i, col in cells_to_drop:\n",
     "    df_edited.at[i, col] = np.nan\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "id": "8671b736",
    "metadata": {},
    "outputs": [
@@ -762,8 +755,9 @@
     }
    ],
    "source": [
-    "missing_fields = []\n",
+    "missing_fields = []  #list of deleted/mising cells\n",
     "\n",
+    "#looping through the csv file based on the column \"product name\" and adding all NaN or \"\" cells to the list\n",
     "for idx, row in df_edited.iterrows():\n",
     "    product_name = row[\"Produktname\"]\n",
     "    \n",
@@ -772,14 +766,14 @@
     "        if pd.isna(value) or str(value).strip().lower() in [\"\"]:\n",
     "            missing_fields.append((idx, product_name, field))\n",
     "\n",
-    "# Display all missing values\n",
+    "#display all missing values\n",
     "for idx, product_name, field in missing_fields:\n",
     "    print(f\"Row {idx} – {product_name} is missing: {field}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "id": "b1e81f27",
    "metadata": {},
    "outputs": [],
@@ -795,7 +789,7 @@
     "# Define application steps\n",
     "def retrieve(state: State):\n",
     "    \"\"\" Our retrieval step. We use our local vector database to retrieve similar documents to the question \"\"\"\n",
-    "    retrieved_docs = local_vector_db.similarity_search(state[\"question\"], k=3) # NOTE: You can change k to retrieve fewer or more documents\n",
+    "    retrieved_docs = local_vector_db.similarity_search(state[\"question\"], k=3) \n",
     "    return {\"context\": retrieved_docs} \n",
     "\n",
     "\n",
@@ -845,30 +839,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cecc2bb",
+   "metadata": {},
+   "source": [
+    "## 10. Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "d62161e5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loading the csv file again to use it as comparison \n",
     "df_original= pd.read_csv(r\"C:\\Users\\charl\\Documents\\CBS\\Code Projects_Python\\AIML25\\AIML25_Project\\data\\SAP_Produktstammdaten_vfinal.csv\", sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "id": "2d84d017",
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_answer(answer):\n",
-    "    # Remove unnecessary words and units like \"kg\", \"kW\", etc.\n",
+    "    #remove unnecessary words and units \n",
     "        normalized_answer = re.sub(r\"(kg|kW|L/h|bar|MPa|M²/H|°C|cm|mm)\", \"\", answer)\n",
-    "    # Remove extra spaces, newlines, or any text that isn't the core numeric value\n",
+    "    #remove extra spaces, newlines, or any text that isn't the core numeric value but keep \".\", \"/\", \"-\"\n",
     "        normalized_answer = re.sub(r\"[^a-zA-Z0-9\\s./-]\", \"\", normalized_answer)\n",
+    "    #remove \"\\n\" and everything after\n",
     "        normalized_answer = re.sub(r'\\n.*', '', normalized_answer)\n",
-    "\n",
-    "    # Normalize the format (strip, lowercased, etc.)\n",
+    "    #normalize the format to lowercase\n",
     "        normalized_answer = normalized_answer.lower()\n",
     "        \n",
     "        return normalized_answer\n",
@@ -878,7 +881,7 @@
     "for idx, product_name, field in missing_fields:\n",
     "    question = f\"What is the {field} for product '{product_name}'?\"\n",
     "\n",
-    "    # Run your LangGraph app\n",
+    "    #running the LangGraph application\n",
     "    state_input = {\"question\": question}\n",
     "    output_state = graph.invoke(state_input)\n",
     "\n",
@@ -886,7 +889,7 @@
     "\n",
     "    answer= normalize_answer(answer)\n",
     "\n",
-    "    # Lookup ground truth from the original DataFrame\n",
+    "    #define ground truth from the original DataFrame\n",
     "    try:\n",
     "        ground_truth_value = df_original.at[idx, field]\n",
     "    except KeyError:\n",
@@ -909,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "id": "20c4feb2",
    "metadata": {},
    "outputs": [
@@ -1044,6 +1047,7 @@
     }
    ],
    "source": [
+    "#showing some results\n",
     "results[:20]"
    ]
   },
